# unification

./: ChangeLog.md  default.nix  equiv-test.cabal  equiv-test.nix  shell.nix  unification.cabal  unification.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.0.2/: equiv-test-0.1.0.0-inplace.conf  package.cache
examples/: Example.hs
src/: Test.hs
src/Control/Lens/: Plated1.hs
src/Control/Monad/: Unify.hs
