name:                unification
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Unify
                     , Control.Lens.Plated1
  build-depends:       base >=4.9 && <5
                     , equivalence
                     , mtl
                     , lens
                     , deriving-compat
                     , bound
  hs-source-dirs:      src
  default-language:    Haskell2010
